fix: company name

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>imayfixit</title>
+    <title>imightfixit</title>
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/4.4.2/zxcvbn.js"></script>
     
